// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      $
    </Text>
    <TextInput
      editable={false}
      keyboardType="decimal-pad"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "center",
            "color": "black",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "auto",
          },
        ]
      }
      value="100"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        fee_title $100
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        555 DOT
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test three 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
    <TextInput
      editable={false}
      keyboardType="decimal-pad"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "center",
            "color": "black",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "auto",
          },
        ]
      }
      value="0"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
       KSM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "90%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        fee_title $11
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        $111
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
    <TextInput
      editable={false}
      keyboardType="decimal-pad"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "center",
            "color": "black",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "auto",
          },
        ]
      }
      value="100"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
       KSM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "90%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        fee_title $11
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        $111
      </Text>
    </View>
  </View>
</View>
`;
